<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UDrink\nIDrive</string>
    <string name="facebook_app_id">916694911703367</string>
    <string name="fb_login_protocol_scheme">fb916694911703367</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCMjmMfB1CUnbGf0vUcMAAZD0yY3v7Evmk</string>
    <string name="title_activity_post_edit_profile_fragment">PostEditProfileFragment</string>
    <string name="action_settings">Settings</string>

    <string name="login_signin">Connect with email</string>
    <string name="login_register">REGISTER</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_dont_have">Don"'"t have account </string>
    <string name="login_or">OR</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_email">email</string>
    <string name="login_password">password</string>
    <string name="login_buttom">  OK  </string>
    <string name="login_confirm">CONFIRM</string>
    <string name="login_cancel">CANCEL</string>
    <string name="login_alert">Alert</string>
    <string name="login_alert_detail">Wrong username or password</string>
    <string name="text_salogan">PROFESSIONALS TO DRIVE YOUR CAR</string>
    <string name="login_please_email">  Please input email </string>
    <string name="login_please_email_type">  Please check format email address </string>
    <string name="login_please_pass">  Please input password  </string>
    <string name="login_please_pass_not_match">Password must be between 4 "-" 16 characters</string>

    <string name="internet_topic">Internet connect fail</string>
    <string name="internet_sub_topic">Please check internet connect</string>

    <string name="register_firstname">firstname</string>
    <string name="register_lastname">lastname</string>
    <string name="register_email">email</string>
    <string name="register_password">password</string>
    <string name="register_date_of_birth">Date of birth</string>

    <string name="forgot_password">Enter your e-mail address and will"'"ll send\nyou link to reset your password.</string>

    <string name="menu_logout">LOGOUT</string>

    <string name="otp_don_have">Don"'"t receive OTP?</string>
    <string name="otp_recode">Resend code</string>
    <string name="otp_phone">Phone number</string>

    <string name="info_any_topic">Driver Gender</string>
    <string name="info_any">Any\nGender</string>
    <string name="info_any_male">Male</string>
    <string name="info_any_female">Female</string>

    <string name="info_contact_topic">Contact Person</string>
    <string name="info_contact_self">Myself</string>
    <string name="info_contact_friend">Friend</string>

    <string name="info_promotion_topic">Promotion Code</string>
    <string name="info_promotion_hint">input code here</string>

    <string name="info_price">Price : </string>

    <string name="info_credit_topic">Payment Option</string>
    <string name="info_credit_cash">Cash</string>
    <string name="info_credit_credit">Credit Card</string>
    <string name="info_credit_submit">ADD PAYMENT OPTION</string>

    <string name="info_car_type">Car Type</string>
    <string name="info_car_type_automatic">Automatic</string>
    <string name="info_car_type_manual">Manual</string>
    <string name="info_car_type_super_car">Super car</string>

    <string name="info_note">Note</string>
    <string name="info_note_hint">specify...</string>
    <string name="info_note_add">ADD</string>

    <string name="info_clock">Booking Time</string>
    <string name="info_clock_now">NOW</string>
    <string name="info_clock_set">SET</string>

    <string name="location_add">ADD</string>
    <string name="location_from">From</string>
    <string name="location_to">To</string>
    <string name="location_current">Current Location</string>
    <string name="location_will_go">Where you will go</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="otp_request_mobile">Please input mobile number</string>
    <string name="otp_mobile_length">Please input mobile number 10 characters</string>

    <string name="permission_topic">Permission request</string>
    <string name="permission_sub_topic">Please check permission</string>

    <string name="table_information_any">Any Gender</string>
    <string name="table_information_contact">Contact</string>
    <string name="table_information_promotion">Promo</string>
    <string name="table_information_super_car">Super car</string>
    <string name="table_information_note">Note</string>
    <string name="table_information_advance">Advance</string>

    <string name="pop_logout_topic">Logout</string>
    <string name="pop_logout_sub_topic">Are you sure you want to logout?</string>

    <string name="booking_topic">Bookink Completed</string>
    <string name="booking_sub_1_topic">Your driver"'"s information will appear</string>
    <string name="booking_sub_2_topic">45 minutes before booking time</string>
    <string name="booking_active">Active</string>
    <string name="booking_estimate">Estimate</string>
    <string name="booking_km">km</string>
    <string name="booking_add_book">ADD BOOKINK</string>
    <string name="booking_cancel">CANCEL</string>

    <string name="booking_cancel_topic">Confirm Cancellation</string>
    <string name="booking_cancel_sub_topic">Are you sure you wish to\ncancel this booking?</string>

    <string name="table_add_more_limit">Limit 5 location</string>

    <string name="finish_your_trip">YOUR TRIP</string>
    <string name="finish_thb">THB</string>
    <string name="finish_pay_by">Pay by</string>
    <string name="finish_credit_card">Credit card</string>
    <string name="finish_cash">Cash</string>
    <string name="finish_add_trip">Add Tip</string>
    <string name="finish_trip_distance">Trip Distance</string>
    <string name="finish_time">Time</string>
    <string name="finish_min">min</string>
    <string name="finish_done">DONE</string>

    <string name="rating_complaint">Service complaints</string>
    <string name="rating_manners">Manners</string>
    <string name="rating_direction">Direction</string>
    <string name="rating_driving">Driving\nskill</string>
    <string name="rating_Gear">Gear&amp;\nButtons\nKnowledge</string>
    <string name="rating_punctuality">Punctuality</string>
    <string name="rating_uniform">Uniform</string>
    <string name="rating_other">Other</string>

    <string name="profile_driver_by_hours">Driver by Hours</string>
    <string name="profile_reward">Reward</string>
    <string name="profile_payment">Payment</string>
    <string name="profile_history">History</string>
    <string name="profile_my_place">My place</string>
    <string name="profile_notification">Notification</string>
    <string name="profile_help_centre">Help Centre</string>
    <string name="profile_terms_condition">Terms and condition</string>

    <string name="reward_title">REWARD</string>
    <string name="reward_status">Standard</string>
    <string name="reward_change_reward">REWARD</string>
    <string name="reward_history_reward">INBOX</string>

    <string name="payment_condition_title1">Add payment method now and</string>
    <string name="payment_condition_title2">enjoy cashless rides</string>
    <string name="payment_add_card">ADD PAYMENT OPTION</string>

    <string name="add_credit_card_detail">credit card detail</string>
    <string name="add_credit_card_name">Card owner"'"s name</string>
    <string name="add_credit_card_number">Number card</string>
    <string name="add_credit_date_year">Date/Year</string>
    <string name="add_credit_save">Save</string>

</resources>
