<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_no_logo_udid"
    tools:context=".presentationlayer.postlogin.PostLoginActivity">

    <LinearLayout
        android:id="@+id/ln_main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical|center_horizontal">

        <ImageView
            android:id="@+id/image_loading_forgot"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_new_udid"
            android:transitionName="profile"/>

        <co.th.udrinkidrive.MyFontsStyle.MyTextViewFonts
            android:id="@+id/tv_sologan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_salogan"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal"
            android:transitionName="text"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/tablelayout"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">

                <co.th.udrinkidrive.MyFontsStyle.MyTextViewFonts
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_normal"
                    android:transitionName="text"/>

                <TableRow
                    android:background="@drawable/border_table"
                    android:layout_marginTop="5dp">
                    <co.th.udrinkidrive.MyFontsStyle.MyEdittextFonts
                        android:id="@+id/et_email"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:backgroundTint="#fff"
                        android:textCursorDrawable="@null"
                        android:hint="@string/register_email"
                        android:textColorHint="@color/color_login_username_pass_hint"
                        android:textColor="@color/bg_main"
                        android:background="@null"
                        android:textSize="@dimen/edittext_normal"
                        android:padding="14dp"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <co.th.udrinkidrive.MyFontsStyle.MyButtonFonts
                android:id="@+id/bt_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button"
                android:gravity="center_horizontal|center_vertical"
                android:padding="6dp"
                android:text="@string/login_confirm"
                android:textColor="#fff"
                android:textSize="@dimen/button_normal"
                android:layout_weight="1"
                android:layout_marginRight="2dp"/>

            <co.th.udrinkidrive.MyFontsStyle.MyButtonFonts
                android:id="@+id/bt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button_default"
                android:gravity="center_horizontal|center_vertical"
                android:padding="6dp"
                android:text="@string/login_cancel"
                android:textColor="#000"
                android:textSize="@dimen/button_normal"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>